Add new data structures